--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@socket.io/admin-ui": "^0.5.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
+    "@types/crypto-random-string": "^2.0.0",
     "@types/express": "^4.17.15",
     "@types/mongoose": "^5.11.97",
     "@types/ws": "^8.5.4",
